--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for hello-fly-autumn-grass-4267 on 2025-05-11T11:29:15+08:00
+# fly.toml app configuration file generated for kwokpia-hello-fly on 2025-05-12T10:36:25+08:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'hello-fly-autumn-grass-4267'
+app = 'kwokpia-hello-fly'
 primary_region = 'hkg'
 
 [build]
