--- a/fly.toml
+++ b/fly.toml
@@ -5,18 +5,33 @@
 
 app = 'kwokpia-hello-fly'
 primary_region = 'hkg'
+regions = [
+  'iad',
+  'ord',
+  'lax',
+  'scl',
+  'gdl',
+  'ams',
+  'fra',
+  'lhr',
+  'nrt',
+  'sin',
+  'bom',
+  'syd',
+  'jnb',
+]
 
 [build]
 
 [http_service]
-  internal_port = 8080
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+internal_port = 8080
+force_https = true
+auto_stop_machines = 'stop'
+auto_start_machines = true
+min_machines_running = 0
+processes = ['app']
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
+memory = '1gb'
+cpu_kind = 'shared'
+cpus = 1
