更新 fly.toml 配置文件，移除不必要的区域并整理区域列表

--- a/fly.toml
+++ b/fly.toml
@@ -6,19 +6,18 @@
 app = 'kwokpia-hello-fly'
 primary_region = 'hkg'
 regions = [
-  'iad',
-  'ord',
-  'lax',
-  'scl',
-  'gdl',
-  'ams',
-  'fra',
-  'lhr',
-  'nrt',
-  'sin',
-  'bom',
-  'syd',
-  'jnb',
+  "hkg",
+  "bom",
+  "sin",
+  "syd",
+  "nrt",
+  "iad",
+  "sjc",
+  "yyz",
+  "scl",
+  "fra",
+  "lhr",
+  "jnb",
 ]
 
 [build]
